# bankstatementcopilot

./: README.md  app.py  pyproject.toml
bankstatement_copilot/: extract_contact_from_statement.py  search_contact.py  show_expense.py  show_income.py  sort_expense_income.py  split_to_expense_income.py
bankstatement_copilot/http/: bkp_client.py  request_session.py
bankstatement_copilot/http/model/: generic_response.py  ocr_bank_statement.py  ocr_bank_statement_line.py  ocr_request.py
bankstatement_copilot/langchain/: langchain_chat.py
bankstatement_copilot/langchain/tools/: uk_company_search.py
bankstatement_copilot/st_2_xero_csv/: countingup_bank_st_to_xero_import_csv.py  metro_bank_st_to_xero_import_csv.py  tide_bank_st_to_xero_import_csv.py
resourse/: bankstatement_mid_data_1.xlsx  expenses_summary.xlsx  income_summary.xlsx  sorted_expenses_summary.xlsx  sorted_income_summary.xlsx  sorted_income_summary_search_contact.xlsx  vk_bankstatementline.xlsx
tests/: test_batch_ocr_hungry_panda_payment_statement_2_csv.py  test_countingup_bank_st_2_xero_csv.py  test_heic2png.py  test_merge_ocr_hungry_panda_payment_statement.py  test_metro_bank_st_2_xero_csv.py  test_ocr_bank_statement_2_xero_csv.py  test_ocr_hungry_panda_payment_statement_2_csv.py  test_tide_bank_st_2_xero_csv.py  test_upload2S3.py
